gccida/c1/init_alias_analysis
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:2947:6: error: use of undeclared identifier 'v26'
rtx *v26; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:2951:4: error: expected ';' after expression
rtx v30; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:2951:5: error: use of undeclared identifier 'v30'
rtx v30; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:2959:26: error: expected expression
reg_known_value = ( rtx *)( ( char *)xcalloc( v1, 8uLL) - 424); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:2963:25: error: expected expression
reg_base_value = ( rtx *)xcalloc( ( unsigned int)( 2 * v0), 8uLL); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:2965:29: error: expected expression
new_reg_base_value = ( rtx *)xmalloc( 8LL * ( unsigned int)reg_base_value_size); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:2969:26: error: expected expression
alias_invariant = ( rtx *)xrealloc( alias_invariant, 8LL * ( unsigned int)reg_base_value_size); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:2985:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), i); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:2991:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:2995:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:2999:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:3003:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:3017:21: error: expected expression
record_set( *( rtx *)( *( _QWORD *)&j[2] + 8LL), 0LL, 0LL); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:3019:22: error: expected expression
note_stores( *( rtx *)&j[2], record_set, 0LL); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:3022:13: error: expected ';' after expression
v14 = ( rtx)j[2]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:3024:32: error: expected expression
v14 = single_set_2( j, *( rtx *)&j[2]); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:3032:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)v14->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:3039:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = ( __int64)v14[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:3080:27: error: expected ')'
if ( !rtx_varies_p( ( rtx)v17, 1) ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/alias.c:3080:19: note: to match this '('
if ( !rtx_varies_p( ( rtx)v17, 1) ) 
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_alias_analysis/src/obj/alias.o] Error 1
